--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
         "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
     },
     "dependencies": {
+        "@types/multer": "^1.4.7",
         "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.33.0",
         "@typescript-eslint/parser": "^4.33.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "2.22.1",
         "express": "^4.17.1",
+        "multer": "^1.4.3",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
